crates/formatter/tests/snapshots/snapshots__synapse__main__delta__35__device_outbox.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2016 OpenMarket Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

drop table if exists device_federation_outbox;
create table device_federation_outbox (
	destination text not null,
	stream_id bigint not null,
	queued_ts bigint not null,
	messages_json text not null
);


drop index if exists device_federation_outbox_destination_id;
create index device_federation_outbox_destination_id
	on device_federation_outbox (destination, stream_id);


drop table if exists device_federation_inbox;
create table device_federation_inbox (
	origin text not null,
	message_id text not null,
	received_ts bigint not null
);

drop index if exists device_federation_inbox_sender_id;
create index device_federation_inbox_sender_id
	on device_federation_inbox (origin, message_id);
