crates/formatter/tests/snapshots/snapshots__synapse__main__delta__35__stream_order_to_extrem.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2016 OpenMarket Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create table stream_ordering_to_exterm (
	stream_ordering bigint not null,
	room_id text not null,
	event_id text not null
);

insert into stream_ordering_to_exterm (stream_ordering, room_id, event_id)
select stream_ordering, room_id, event_id
from event_forward_extremities
	inner join (
		select room_id, max(stream_ordering) as stream_ordering
		from events inner join event_forward_extremities using (room_id, event_id)
		group by room_id
	) as rms using (room_id);

create index stream_ordering_to_exterm_idx
	on stream_ordering_to_exterm (stream_ordering);

create index stream_ordering_to_exterm_rm_idx
	on stream_ordering_to_exterm (room_id, stream_ordering);
